--- a/docs/ch5/164p연관관계.md
+++ b/docs/ch5/164p연관관계.md
@@ -20,3 +20,27 @@
   * 참조를 사용하는 객체의 연관관계는 단방향이다
     * 이것은 양방향으로 만들어도 그건 단방향을 양쪽으로 하는 것이다
   * 외래 키를 사용하는 테이블의 연관관계는 양방향이다.
+
+---
+
+## 수정(update) - 177p
+![ch5_177p_update.png](./img/ch5_177p_update.png)
+* 먼저 위처럼 데이터 베이스의 값이 있다고 가정하자
+  * member1은 team1에 속해있다.
+
+```java
+private static void logic(EntityManager em) {
+    //새로운 팀2
+    Team team2 = new Team("team2", "팀2");
+    em.persist(team2);
+
+    //회원1에서 새로운 팀 2설정
+    Member member = em.find(Member.class, "member1");
+    member.setTeam(team2);
+}
+```
+* 팀을 새로 만들어서 만든다.(persist)
+* 그 후 setTeam으로 연결시켜주면 다른 메소드를 호출하지 않아도 연결된다.
+
+![ch5_177p_update_after.png](./img/ch5_177p_update_after.png)
+* 값이 연결되서 변경된걸 확인할 수 있다.
